--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,11 +9,21 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Weapon.Alternate",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.IsChanging",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Primary",DevComment="")
++GameplayTagList=(Tag="Ability.Weapon.Primary.Instant",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Reload",DevComment="")
++GameplayTagList=(Tag="Ability.Weapon.Secondary",DevComment="")
++GameplayTagList=(Tag="Data.Damage",DevComment="")
++GameplayTagList=(Tag="Data.ReloadAmount.Reserve",DevComment="")
++GameplayTagList=(Tag="Effect.Damage.CanHeadShot",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Weapon.Rifle.Fire",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ammo.None",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ammo.Rifle",DevComment="")
 +GameplayTagList=(Tag="Weapon.Equipped.Rifle",DevComment="")
++GameplayTagList=(Tag="Weapon.Fail.Activation.OnCooldown",DevComment="")
++GameplayTagList=(Tag="Weapon.IsFiring",DevComment="")
++GameplayTagList=(Tag="Weapon.Rifle.Aiming",DevComment="")
++GameplayTagList=(Tag="Weapon.Rifle.AimingRemoval",DevComment="")
 +GameplayTagList=(Tag="Weapon.Rifle.FireMode.Burst",DevComment="")
 +GameplayTagList=(Tag="Weapon.Rifle.FireMode.FullAuto",DevComment="")
 +GameplayTagList=(Tag="Weapon.Rifle.FireMode.SemiAuto",DevComment="")
