--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,6 +8,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Weapon.Alternate",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.IsChanging",DevComment="")
++GameplayTagList=(Tag="Ability.Weapon.IsChangingDelay",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Primary",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Primary.Instant",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Reload",DevComment="")
