--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,22 +6,43 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.BlocksInteraction",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Alternate",DevComment="")
++GameplayTagList=(Tag="Ability.Weapon.Alternate.Instant",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.IsChanging",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.IsChangingDelay",DevComment="")
++GameplayTagList=(Tag="Ability.Weapon.IsChangingDelayReplication",DevComment="")
++GameplayTagList=(Tag="Ability.Weapon.Melee",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Primary",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Primary.Instant",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Reload",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Secondary",DevComment="")
++GameplayTagList=(Tag="Ability.Weapon.Secondary.Instant",DevComment="")
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Data.ReloadAmount.Reserve",DevComment="")
++GameplayTagList=(Tag="Effect.Damage.Base",DevComment="")
 +GameplayTagList=(Tag="Effect.Damage.CanHeadShot",DevComment="")
++GameplayTagList=(Tag="Effect.Damage.HeadShot",DevComment="")
++GameplayTagList=(Tag="Effect.Damage.Melee",DevComment="")
++GameplayTagList=(Tag="Effect.Damage.Rifle",DevComment="")
++GameplayTagList=(Tag="Effect.RemoveOnDeath",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.DamageTaken",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Weapon.Melee.Hit",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Weapon.Rifle.Fire",DevComment="")
++GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
++GameplayTagList=(Tag="InputTag.Weapon.Melee",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
++GameplayTagList=(Tag="State.Interacting",DevComment="")
++GameplayTagList=(Tag="State.InteractingRemoval",DevComment="")
++GameplayTagList=(Tag="State.KnockedDown",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ammo.None",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ammo.Rifle",DevComment="")
++GameplayTagList=(Tag="Weapon.Ammo.Rocket",DevComment="")
++GameplayTagList=(Tag="Weapon.Ammo.Shotgun",DevComment="")
++GameplayTagList=(Tag="Weapon.Equipped.None",DevComment="")
 +GameplayTagList=(Tag="Weapon.Equipped.Rifle",DevComment="")
 +GameplayTagList=(Tag="Weapon.Fail.Activation.OnCooldown",DevComment="")
++GameplayTagList=(Tag="Weapon.FireMode.None",DevComment="")
 +GameplayTagList=(Tag="Weapon.IsFiring",DevComment="")
 +GameplayTagList=(Tag="Weapon.Rifle.Aiming",DevComment="")
 +GameplayTagList=(Tag="Weapon.Rifle.AimingRemoval",DevComment="")
