--- a/ActionWorldRPG.uproject
+++ b/ActionWorldRPG.uproject
@@ -12,7 +12,8 @@
 				"Engine",
 				"GameplayAbilities",
 				"CoreUObject",
-				"AIModule"
+				"AIModule",
+				"ModularGameplay"
 			]
 		}
 	],
@@ -57,6 +58,10 @@
 		},
 		{
 			"Name": "GameFeatures",
+			"Enabled": true
+		},
+		{
+			"Name": "BlackOutCore",
 			"Enabled": true
 		}
 	]
