--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -36,6 +36,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayEvent.Death",DevComment="")
 +GameplayTagList=(Tag="InputTag.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="InputTag.Weapon.Melee",DevComment="")
++GameplayTagList=(Tag="InputTag.Weapon.Ranged",DevComment="")
 +GameplayTagList=(Tag="Object.Chest.State.Open",DevComment="")
 +GameplayTagList=(Tag="Object.Teleport.State.Activate",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
