--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -43,11 +43,14 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Interacting",DevComment="")
 +GameplayTagList=(Tag="State.InteractingRemoval",DevComment="")
 +GameplayTagList=(Tag="State.KnockedDown",DevComment="")
++GameplayTagList=(Tag="Weapon.Ammo.Clip",DevComment="")
++GameplayTagList=(Tag="Weapon.Ammo.ClipSize",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ammo.None",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ammo.Pistol",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ammo.Rifle",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ammo.Rocket",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ammo.Shotgun",DevComment="")
++GameplayTagList=(Tag="Weapon.Ammo.Spare",DevComment="")
 +GameplayTagList=(Tag="Weapon.Equipped.None",DevComment="")
 +GameplayTagList=(Tag="Weapon.Equipped.Rifle",DevComment="")
 +GameplayTagList=(Tag="Weapon.Fail.Activation.OnCooldown",DevComment="")
